--- a/pom.xml
+++ b/pom.xml
@@ -372,6 +372,43 @@
                 <version>${org.seleniumhq.selenium.unitdriver.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-firefox-driver</artifactId>
+                <version>${org.seleniumhq.selenium.unitdriver.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-chrome-driver</artifactId>
+                <version>${org.seleniumhq.selenium.unitdriver.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.opera</groupId>
+                <artifactId>operadriver</artifactId>
+                <version>${org.seleniumhq.selenium.operaminidriver.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-ie-driver</artifactId>
+                <version>${org.seleniumhq.selenium.unitdriver.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-firefox-driver</artifactId>
+                <version>${org.seleniumhq.selenium.firfoxdriver.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-chrome-driver</artifactId>
+                <version>${org.seleniumhq.selenium.firfoxdriver.version}</version>
+                <scope>test</scope>
+            </dependency>
+
 
             <!-- Other Dependencies-->
             <dependency>
@@ -964,7 +1001,8 @@
         <!-- Selenium -->
         <org.seleniumhq.selenium.version>3.1.0</org.seleniumhq.selenium.version>
         <org.seleniumhq.selenium.unitdriver.version>2.40.0</org.seleniumhq.selenium.unitdriver.version>
-
+        <org.seleniumhq.selenium.operaminidriver.version>0.8.1</org.seleniumhq.selenium.operaminidriver.version>
+        <org.seleniumhq.selenium.firfoxdriver.version>2.48.2</org.seleniumhq.selenium.firfoxdriver.version>
         <!-- Test jar plugins -->
         <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
         <maven.compiler.plugin.version>3.6.1</maven.compiler.plugin.version>
