--- a/tests/ui-tests/pom.xml
+++ b/tests/ui-tests/pom.xml
@@ -34,6 +34,7 @@
     <url>http://wso2.com</url>
 
     <modules>
+        <module>ui-test-commons</module>
         <module>user-portal</module>
     </modules>
 
