--- a/pom.xml
+++ b/pom.xml
@@ -388,12 +388,12 @@
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-firefox-driver</artifactId>
-                <version>${org.seleniumhq.selenium.firfoxdriver.version}</version>
+                <version>${org.seleniumhq.selenium.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-chrome-driver</artifactId>
-                <version>${org.seleniumhq.selenium.firfoxdriver.version}</version>
+                <version>${org.seleniumhq.selenium.version}</version>
             </dependency>
 
 
@@ -986,10 +986,10 @@
         <javax.ws.rs.import.version.range>[2.0.0, 3.0.0)</javax.ws.rs.import.version.range>
 
         <!-- Selenium -->
-        <org.seleniumhq.selenium.version>3.1.0</org.seleniumhq.selenium.version>
+        <org.seleniumhq.selenium.version>2.26.0</org.seleniumhq.selenium.version>
         <org.seleniumhq.selenium.unitdriver.version>2.40.0</org.seleniumhq.selenium.unitdriver.version>
         <org.seleniumhq.selenium.operaminidriver.version>0.8.1</org.seleniumhq.selenium.operaminidriver.version>
-        <org.seleniumhq.selenium.firfoxdriver.version>2.48.2</org.seleniumhq.selenium.firfoxdriver.version>
+        <org.seleniumhq.selenium.firfoxdriver.version>2.26.0</org.seleniumhq.selenium.firfoxdriver.version>
         <!-- Test jar plugins -->
         <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
         <maven.compiler.plugin.version>3.6.1</maven.compiler.plugin.version>
