--- a/pom.xml
+++ b/pom.xml
@@ -367,6 +367,11 @@
             </dependency>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>${org.seleniumhq.selenium.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-api</artifactId>
                 <version>${org.seleniumhq.selenium.version}</version>
             </dependency>
@@ -986,7 +991,7 @@
         <javax.ws.rs.import.version.range>[2.0.0, 3.0.0)</javax.ws.rs.import.version.range>
 
         <!-- Selenium -->
-        <org.seleniumhq.selenium.version>2.26.0</org.seleniumhq.selenium.version>
+        <org.seleniumhq.selenium.version>3.0.1</org.seleniumhq.selenium.version>
         <org.seleniumhq.selenium.unitdriver.version>2.40.0</org.seleniumhq.selenium.unitdriver.version>
         <org.seleniumhq.selenium.operaminidriver.version>0.8.1</org.seleniumhq.selenium.operaminidriver.version>
         <org.seleniumhq.selenium.firfoxdriver.version>2.26.0</org.seleniumhq.selenium.firfoxdriver.version>
