--- a/tests/ui-tests/user-portal/pom.xml
+++ b/tests/ui-tests/user-portal/pom.xml
@@ -157,7 +157,7 @@
                                 <!--properties can be : headless, firefox, chrome, ie, opera-->
                                 <property>
                                     <name>driver</name>
-                                    <value>firefox</value>
+                                    <value>chrome</value>
                                 </property>
                                 <property>
                                     <name>home</name>
