Add admin-portal initial directory structure

--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -35,6 +35,7 @@
     <modules>
         <module>client-services/org.wso2.is.portal.user.client.api</module>
         <module>apps/org.wso2.carbon.iam.user-portal.app</module>
+        <module>apps/org.wso2.carbon.iam.admin-portal.app</module>
     </modules>
 
 </project>
