--- a/product/pom.xml
+++ b/product/pom.xml
@@ -195,6 +195,11 @@
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.identity.inbound.auth.saml2</groupId>
+            <artifactId>org.wso2.carbon.identity.auth.saml2.common.feature</artifactId>
+            <type>zip</type>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity.inbound.auth.saml2</groupId>
             <artifactId>org.wso2.carbon.identity.sso.saml.server.feature</artifactId>
             <type>zip</type>
         </dependency>
@@ -498,6 +503,10 @@
                                 <feature>
                                     <id>org.wso2.carbon.identity.gateway.resource.feature</id>
                                     <version>${carbon.identity.gateway.version}</version>
+                                </feature>
+                                <feature>
+                                    <id>org.wso2.carbon.identity.auth.saml2.common.feature</id>
+                                    <version>${carbon.identity.auth.saml2.common.version}</version>
                                 </feature>
                                 <feature>
                                     <id>org.wso2.carbon.identity.sso.saml.server.feature</id>
