--- a/tests/ui-tests/user-portal/pom.xml
+++ b/tests/ui-tests/user-portal/pom.xml
@@ -53,11 +53,6 @@
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-api</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-firefox-driver</artifactId>
             <scope>test</scope>
         </dependency>
@@ -154,7 +149,11 @@
                                 <!--properties can be : headless, firefox, chrome, ie, opera-->
                                 <property>
                                     <name>driver</name>
-                                    <value>chrome</value>
+                                    <value>headless</value>
+                                </property>
+                                <property>
+                                    <name>pathToChromeDriver</name>
+                                    <value>src/test/resources/drivers/chromedriver/chromedriver</value>
                                 </property>
                                 <property>
                                     <name>home</name>
