--- a/tests/ui-tests/user-portal/pom.xml
+++ b/tests/ui-tests/user-portal/pom.xml
@@ -53,6 +53,11 @@
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-firefox-driver</artifactId>
             <scope>test</scope>
         </dependency>
@@ -149,11 +154,7 @@
                                 <!--properties can be : headless, firefox, chrome, ie, opera-->
                                 <property>
                                     <name>driver</name>
-                                    <value>headless</value>
-                                </property>
-                                <property>
-                                    <name>pathToChromeDriver</name>
-                                    <value>src/test/resources/drivers/chromedriver/chromedriver</value>
+                                    <value>chrome</value>
                                 </property>
                                 <property>
                                     <name>home</name>
