Add landing page with navigation menus

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/app.yaml
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/app.yaml
@@ -22,27 +22,18 @@ theme : "org.wso2.carbon.uuf.common.default.theme"
 menus :
   - name: "main"
     items:
-      - text: "Home"
+      - text: "Overview"
         link: ""
         icon: "fw-home"
       - text: "Users"
+        link: "/users"
+        icon: "fw fw-user"
+      - text: "Groups"
         link: ""
-        submenus:
-           - text: "Login"
-             link: "login"
-             icon: "fw fw-add"
-           - text: "Sign up"
-             link: "user/signup"
-             icon:  "fw fw-add"
-           - text: "Reset Password"
-             link: "user/reset-password"
-             icon:  "fw fw-add"
-           - text: "User Profile"
-             link: "user/profile"
-             icon:  "fw fw-user"
-           - text: "Account Settings"
-             link: "account/account-setting"
-             icon:  "fw fw-add"
+        icon: "fw fw-user"
+      - text: "Roles"
+        link: ""
+        icon: "fw fw-user"
 
 errorPages:
   404: "/foundation/error/404"
