Adding right-hand side logout option for admin portal users.

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/component.yaml
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/component.yaml
@@ -23,6 +23,10 @@ bindings:
       mode: "append"
       fragments:
         - "org.wso2.carbon.uuf.common.foundation.ui.menubar"
+    - zoneName: "org.wso2.carbon.iam.admin-portal.feature.usermenu"
+      mode: "append"
+      fragments:
+        - "org.wso2.carbon.iam.admin-portal.feature.usermenu"
 
 config:
   appName: "Identity Server Admin Portal"
