Adding a system property to select a driver

--- a/tests/ui-tests/user-portal/pom.xml
+++ b/tests/ui-tests/user-portal/pom.xml
@@ -157,6 +157,10 @@
                                     <value>chrome</value>
                                 </property>
                                 <property>
+                                    <name>pathToChromeDriver</name>
+                                    <value>/home/wso2dinali/Downloads/chrome/chromedriver</value>
+                                </property>
+                                <property>
                                     <name>home</name>
                                     <value>localhost</value>
                                 </property>
