--- a/pom.xml
+++ b/pom.xml
@@ -374,7 +374,7 @@
             </dependency>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
-                <artifactId>selenium-htmlunit-driver</artifactId>
+                <artifactId>htmlunit-driver</artifactId>
                 <version>${org.seleniumhq.selenium.unitdriver.version}</version>
                 <scope>test</scope>
             </dependency>
@@ -1001,7 +1001,7 @@
 
         <!-- Selenium -->
         <org.seleniumhq.selenium.version>3.0.1</org.seleniumhq.selenium.version>
-        <org.seleniumhq.selenium.unitdriver.version>2.40.0</org.seleniumhq.selenium.unitdriver.version>
+        <org.seleniumhq.selenium.unitdriver.version>2.23.2</org.seleniumhq.selenium.unitdriver.version>
         <org.seleniumhq.selenium.firfoxdriver.version>2.26.0</org.seleniumhq.selenium.firfoxdriver.version>
         <!-- Test jar plugins -->
         <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
