--- a/tests/ui-tests/user-portal/pom.xml
+++ b/tests/ui-tests/user-portal/pom.xml
@@ -63,7 +63,7 @@
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-htmlunit-driver</artifactId>
+            <artifactId>htmlunit-driver</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -154,11 +154,11 @@
                                 <!--properties can be : headless, firefox, chrome, ie, opera-->
                                 <property>
                                     <name>driver</name>
-                                    <value>chrome</value>
+                                    <value>headless</value>
                                 </property>
                                 <property>
                                     <name>pathToChromeDriver</name>
-                                    <value>/home/wso2dinali/Downloads/chrome/chromedriver</value>
+                                    <value>src/test/resources/drivers/chrome/chromedriver</value>
                                 </property>
                                 <property>
                                     <name>home</name>
