--- a/pom.xml
+++ b/pom.xml
@@ -131,8 +131,8 @@
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.identity.mgt</groupId>
-                <artifactId>org.wso2.carbon.identity.recovery.server.feature</artifactId>
-                <version>${org.wso2.carbon.identity.recovery.server.feature.version}</version>
+                <artifactId>org.wso2.carbon.identity.recovery.feature</artifactId>
+                <version>${org.wso2.carbon.identity.recovery.feature.version}</version>
                 <type>zip</type>
             </dependency>
             <dependency>
@@ -875,9 +875,9 @@
         <project.scm.id>wso2-scm-server</project.scm.id>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <carbon.security.userstore.jdbc.version>0.1.2</carbon.security.userstore.jdbc.version>
-        <org.wso2.carbon.identity.mgt.version>0.1.33</org.wso2.carbon.identity.mgt.version>
+        <org.wso2.carbon.identity.mgt.version>0.1.37-SNAPSHOT</org.wso2.carbon.identity.mgt.version>
         <carbon.osgi.test.util.version>5.1.0</carbon.osgi.test.util.version>
-        <org.wso2.carbon.identity.recovery.server.feature.version>0.1.33</org.wso2.carbon.identity.recovery.server.feature.version>
+        <org.wso2.carbon.identity.recovery.feature.version>0.1.37-SNAPSHOT</org.wso2.carbon.identity.recovery.feature.version>
         <org.wso2.carbon.identity.commons.feature.version>0.1.23</org.wso2.carbon.identity.commons.feature.version>
         <org.wso2.carbon.identity.commons.version>0.1.23</org.wso2.carbon.identity.commons.version>
         <org.wso2.carbon.identity.inbound.provisioning.scim2.version>2.0.15</org.wso2.carbon.identity.inbound.provisioning.scim2.version>
