Initial page for user groups.

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/app.yaml
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/app.yaml
@@ -29,7 +29,7 @@ menus :
         link: "/users"
         icon: "fw fw-user"
       - text: "Groups"
-        link: ""
+        link: "/groups"
         icon: "fw fw-user"
       - text: "Roles"
         link: ""
