--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/app.yaml
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/app.yaml
@@ -26,7 +26,7 @@ menus :
         link: ""
         icon: "fw-home"
       - text: "Users"
-        link: "/users"
+        link: "/users/list"
         icon: "fw fw-user"
       - text: "Groups"
         link: "/groups"
