--- a/product/carbon-home/conf/identity/profile-mapping.yaml
+++ b/product/carbon-home/conf/identity/profile-mapping.yaml
@@ -149,3 +149,21 @@ profiles:
    readonly: false
    regex: "*"
    dataType: "email"
+ -
+  profileName: "user-identifier"
+  isAdminProfile: false
+  claims:
+  -
+   claimURI: "http://wso2.org/claims/username"
+   displayName: "Username"
+   required: true
+   readonly: true
+   verifier: "claim verifying extension"
+   validator: "claim validating extension"
+   transformer: "transform extension"
+   regex: ".*"
+   defaultValue: "user1"
+   dataType: "text"
+   properties:
+    claimId: "Username"
+
