--- a/pom.xml
+++ b/pom.xml
@@ -249,6 +249,13 @@
                 <type>zip</type>
             </dependency>
             <dependency>
+                <groupId>org.wso2.is</groupId>
+                <artifactId>org.wso2.carbon.iam.portal.common</artifactId>
+                <version>${carbon.is.version}</version>
+                <type>zip</type>
+                <classifier>uuf-component</classifier>
+            </dependency>
+            <dependency>
                 <groupId>org.wso2.carbon.uuf.common</groupId>
                 <artifactId>org.wso2.carbon.uuf.common.default.theme</artifactId>
                 <version>${carbon.uuf.common.version}</version>
