--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/pom.xml
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/pom.xml
@@ -99,6 +99,7 @@
                                     org.wso2.is.portal.user.client.api,
                                     org.wso2.is.portal.user.client.api.micro,
                                     org.wso2.is.portal.user.client.api.bean,
+                                    org.wso2.is.portal.user.client.api.util,
                                     org.wso2.carbon.identity.recovery.*
                                 </Import-Package>
                             </instructions>
