--- a/product/carbon-home/conf/identity/profile-mapping.yaml
+++ b/product/carbon-home/conf/identity/profile-mapping.yaml
@@ -150,7 +150,7 @@ profiles:
    regex: "*"
    dataType: "email"
  -
-  profileName: "user-identifier"
+  profileName: "user-list"
   isAdminProfile: false
   claims:
   -
