--- a/product/carbon-home/conf/identity/profile-mapping.yaml
+++ b/product/carbon-home/conf/identity/profile-mapping.yaml
@@ -158,12 +158,28 @@ profiles:
    displayName: "Username"
    required: true
    readonly: true
-   verifier: "claim verifying extension"
-   validator: "claim validating extension"
-   transformer: "transform extension"
    regex: ".*"
    defaultValue: "user1"
    dataType: "text"
-   properties:
-    claimId: "Username"
+  -
+   claimURI: "http://wso2.org/claims/givenname"
+   displayName: "First Name"
+   required: true
+   readonly: false
+   regex: "*"
+   dataType: "text"
+  -
+   claimURI: "http://wso2.org/claims/lastname"
+   displayName: "Last Name"
+   required: true
+   readonly: false
+   regex: "*"
+   dataType: "text"
+  -
+   claimURI: "http://wso2.org/claims/email"
+   displayName: "Email"
+   required: true
+   readonly: false
+   regex: "*"
+   dataType: "email"
 
