Revert "Merge branch 'master' of https://github.com/wso2/product-is into M5"
This reverts commit a99254da685d49bcd4bbe15d58fbd229f6409d98, reversing
changes made to 1d821b521a257c6756b50add7fe5e43626254037.

--- a/product/pom.xml
+++ b/product/pom.xml
@@ -138,7 +138,7 @@
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.identity.mgt</groupId>
-            <artifactId>org.wso2.carbon.identity.recovery.feature</artifactId>
+            <artifactId>org.wso2.carbon.identity.recovery.server.feature</artifactId>
             <type>zip</type>
         </dependency>
 
@@ -459,8 +459,8 @@
                                     <version>${carbon.security.userstore.jdbc.version}</version>
                                 </feature>
                                 <feature>
-                                    <id>org.wso2.carbon.identity.recovery.feature</id>
-                                    <version>${org.wso2.carbon.identity.recovery.feature.version}</version>
+                                    <id>org.wso2.carbon.identity.recovery.server.feature</id>
+                                    <version>${org.wso2.carbon.identity.recovery.server.feature.version}</version>
                                 </feature>
                                 <feature>
                                     <id>org.wso2.carbon.security.caas.feature</id>
@@ -640,8 +640,8 @@
                                     <version>${org.wso2.carbon.identity.commons.feature.version}</version>
                                 </feature>
                                 <feature>
-                                    <id>org.wso2.carbon.identity.recovery.feature</id>
-                                    <version>${org.wso2.carbon.identity.recovery.feature.version}</version>
+                                    <id>org.wso2.carbon.identity.recovery.server.feature</id>
+                                    <version>${org.wso2.carbon.identity.recovery.server.feature.version}</version>
                                 </feature>
                                 <feature>
                                     <id>org.wso2.carbon.security.caas.feature</id>
