--- a/pom.xml
+++ b/pom.xml
@@ -131,8 +131,8 @@
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.identity.mgt</groupId>
-                <artifactId>org.wso2.carbon.identity.recovery.feature</artifactId>
-                <version>${org.wso2.carbon.identity.recovery.feature.version}</version>
+                <artifactId>org.wso2.carbon.identity.recovery.server.feature</artifactId>
+                <version>${org.wso2.carbon.identity.recovery.server.feature.version}</version>
                 <type>zip</type>
             </dependency>
             <dependency>
@@ -367,37 +367,6 @@
                 <artifactId>xalan</artifactId>
                 <version>${xalan.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.seleniumhq.selenium</groupId>
-                <artifactId>selenium-java</artifactId>
-                <version>${org.seleniumhq.selenium.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.seleniumhq.selenium</groupId>
-                <artifactId>selenium-api</artifactId>
-                <version>${org.seleniumhq.selenium.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.seleniumhq.selenium</groupId>
-                <artifactId>htmlunit-driver</artifactId>
-                <version>${org.seleniumhq.selenium.unitdriver.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.seleniumhq.selenium</groupId>
-                <artifactId>selenium-chrome-driver</artifactId>
-                <version>${org.seleniumhq.selenium.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-exec</artifactId>
-                <version>${org.apache.commons.exec.version}</version>
-                <scope>test</scope>
-            </dependency>
-
 
             <!-- Other Dependencies-->
             <dependency>
@@ -881,10 +850,10 @@
 
         <project.scm.id>wso2-scm-server</project.scm.id>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <carbon.security.userstore.jdbc.version>0.1.3</carbon.security.userstore.jdbc.version>
-        <org.wso2.carbon.identity.mgt.version>0.1.38</org.wso2.carbon.identity.mgt.version>
+        <carbon.security.userstore.jdbc.version>0.1.2</carbon.security.userstore.jdbc.version>
+        <org.wso2.carbon.identity.mgt.version>0.1.33</org.wso2.carbon.identity.mgt.version>
         <carbon.osgi.test.util.version>5.1.0</carbon.osgi.test.util.version>
-        <org.wso2.carbon.identity.recovery.feature.version>0.1.38</org.wso2.carbon.identity.recovery.feature.version>
+        <org.wso2.carbon.identity.recovery.server.feature.version>0.1.33</org.wso2.carbon.identity.recovery.server.feature.version>
         <org.wso2.carbon.identity.commons.feature.version>0.1.23</org.wso2.carbon.identity.commons.feature.version>
         <org.wso2.carbon.identity.commons.version>0.1.23</org.wso2.carbon.identity.commons.version>
         <org.wso2.carbon.identity.inbound.provisioning.scim2.version>2.0.15</org.wso2.carbon.identity.inbound.provisioning.scim2.version>
@@ -1005,15 +974,6 @@
         <axiom.wso2.version>1.2.11.wso2v10</axiom.wso2.version>
 
         <javax.ws.rs.import.version.range>[2.0.0, 3.0.0)</javax.ws.rs.import.version.range>
-
-        <!-- Selenium -->
-        <org.seleniumhq.selenium.version>3.0.1</org.seleniumhq.selenium.version>
-        <org.seleniumhq.selenium.unitdriver.version>2.23.2</org.seleniumhq.selenium.unitdriver.version>
-        <!-- Test jar plugins -->
-        <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
-        <maven.compiler.plugin.version>3.6.1</maven.compiler.plugin.version>
-
-        <org.apache.commons.exec.version>1.3</org.apache.commons.exec.version>
 
     </properties>
 
